--- a/scritturaTesi/ringraziamenti.tex
+++ b/scritturaTesi/ringraziamenti.tex
@@ -1,1 +1,12 @@
-Grazie a tutti
+Vorrei prendere un momento per esprimere la mia gratitudine a tutte le persone che hanno contribuito al raggiungimento di questo traguardo.
+
+Innanzitutto, desidero ringraziare il mio Relatore, il \textit{Professor Matteo Rosati} per la usa estrema disponibilit\`a e il suo costante sostegno.
+
+Un ringraziamento speciale va alla mia famiglia per essermi sempre stata vicino, soprattuto nei momenti pi\'u difficili di questo percorso di studi.
+
+Vorrei inoltre ringraziare il mio amico e collega \textit{Davide Tedesco} per aver provveduto a spronarmi a dare sempre il massimo.
+
+Infine, ma non per importanza, vorrei ringraziare i colleghi e gli amici che hanno contribuito alla mia crescita personale e professionale. 
+
+
+
