--- a/scritturaTesi/elaboratoFinale.tex
+++ b/scritturaTesi/elaboratoFinale.tex
@@ -11,7 +11,7 @@
 \annoAccademico{2022/2023}
 
 % dati opzionali
-\dedica{Questa \`e la dedica} % solo se nel documento si usa il comando \generaDedica
+%\dedica{Questa \`e la dedica} % solo se nel documento si usa il comando \generaDedica
 % --- FINE dati relativi al template TesiDiaUniroma3
 
 % --- INIZIO richiamo di pacchetti di utilità. Questi sono un esempio e non sono strettamente necessari al modello per la tesi.
@@ -20,7 +20,7 @@
 \usepackage[all]{hypcap} % per far si che i link ipertestuali alle immagini puntino all'inizio delle stesse e non alla didascalia sottostante
 \usepackage{amsthm}	% per definizioni e teoremi
 \usepackage{amsmath}	% per ``cases'' environment
-\usepackage{bbm}
+\usepackage{bbold}
 
 
 \usepackage{algorithm, float}	%pacchetti utilizzati per la scrittura di pseudo-codice
