--- a/scritturaTesi/capitolo_2.tex
+++ b/scritturaTesi/capitolo_2.tex
@@ -66,7 +66,7 @@ P_B \sim \mathcal N(\sqrt{T}p_A, 2 + \xi)
 \end{split}
 \end{equation}
 \end{itemize}  
-Le due procedure differiscono nella scelta di quali sono i dati primari: nella riconciliazione diretta i dati di Alice sono i dati primari e Bob corregge i suoi dati di conseguenza, mentre nella riconciliazione inversa sono i dati di Bob ad essere primari, vengono inviati ad Alice la quale li utilizza per correggere i propri dati. 
+
 In caso di misura omodina \`e necessaria un'operazione addizionale cio\'e il sifting. Infatti, a questo punto del protocollo Alice \`e in posseso del doppio dei dati di Bob (in quanto Bob misura solo una della due componenti per ogni round) e per far s\`i che abbiano la stessa quantit\`a di dati correlati Bob rivela ad Alice, su canale classico pubblico, quale componente ha misurato ad ogni round; Alice prende nota della componenti misurate e scarta le altre\cite{milicevic_key_2018}. Notare che questa operazione non compromette la sicurezza: Eve saprà solo quale tipo di misura ha eseguito Bob ad ogni round, ma non il risultato ottenuto né il valore  vero inviato da Alice.
 
 \subsection{Stima dei parametri}\label{subse:stima-parametri}
@@ -107,7 +107,7 @@ T& = \frac{c^2}{V_{mod}^2 + 2V_{mod}} \\
 \end{split}
 \end{equation}
 
-Ora non ci resta che calcolare $\chi_{EB}$ in questo modo:
+Ora non ci resta che calcolare $\chi_{EB}$ in questo modo \ref{https://doi.org/10.1002/qute.201800011}:
 %Ora non ci resta che calcolare le quantit\`a $\nu_1$, $\nu_2$ e $\nu_3$ alle quali verr\`a applicata una funzione $g(\nu)$ che ci porter\`a al calcolo della mutua informazione fra Eve e Bob. Finalmente \`e giunto in momento di calcolare anche $\chi_{EB}$ in questo modo:
 \begin{equation} \label{eq:EB-info}
 \chi_{EB} = g(\nu_1) + g(\nu_2) - g(\nu_3)
@@ -136,6 +136,8 @@ Se la stima dei parametri ha avuto successo Alice e Bob sono in possesso di due 
 \item \textbf{diretta}: Alice produce un messaggio fittizio codificando i suoi dati (correlati a quelli di Bob) con una chiave. Bob basandosi sulle misure effettuate in fase di trasmissione cerca di estrarre la chiave dal messaggio fittizio;
 \item \textbf{inversa}: la procedura \`e la stessa della riconciliazione diretta solamente che vengono scambiate le parti, Bob produce il messaggio fittizio ed Alice cerca di estrarre la chiave.
 \end{itemize} 
+
+Le due procedure differiscono nella scelta di quali sono i dati primari: nella riconciliazione diretta i dati di Alice sono i dati primari e Bob corregge i suoi dati di conseguenza, mentre nella riconciliazione inversa sono i dati di Bob ad essere primari, vengono inviati ad Alice la quale li utilizza per correggere i propri dati. 
  
 La riconciliazione diretta presenta un problema: non pu\`o essere utilizzata per valori di trasmittanza troppo bassi, questo perch\'e Eve avrebbe pi\'u informazione sui dati di Alice rispetto a Bob e quindi risulterebbe impossibile creare una chiave crittografica sicura. D'altro canto la riconciliazione inversa non presenta questo problema quindi \`e possibile utilizzarla anche con valori bassi di trasmittanza, per\`o \`e da tenere in considerazione che pi\`u bassa \`e la trasmittanza pi\`u sar\`a distruttivo l'effetto del rumore del canale~\cite{https://doi.org/10.1002/qute.201800011}.
 
@@ -161,7 +163,7 @@ Cos\`i facendo abbiamo ottenuto altre due sequenze di dati $\textbf{X}$ e $\text
 
 Il passo successivo per Bob sar\`a quello di generare una stringa di bit random $\textbf{s} \in \{0,1\}^k$. Attraverso algoritmi di codifica LDPC (Low-Density Parity-Check)~\cite{borwankar_low_nodate} viene calcolata una matrice \textbf{H} necessaria per aggiungere alla stringa \textbf{s} dei bit ridondanti di parit\`a ottenendo la stringa $\textbf{c} \in \{0,1\}^n$ dove $n$ corrisponde alla lunghezza della sottosequenza di dati non utilizzati per la stima dei parametri.
 
-Dopodich\'e vengono utilizzati dei codici LDPC~\cite{borwankar_low_nodate} che rappresentano una classe di codici correttori di errori utilizzari nell'ambito delle telecomunicazioni. Una delle ragioni per cui questi codici sono largamente utilizzati \`e la loro abilit\`a di raggiungere prestazione vicine alla capacit\`a teorica del canale di comunicazione, nota come il limite di Shannon. I codici LDPC possono essere rappresentati in due modi:
+I LDPC~\cite{borwankar_low_nodate} che rappresentano una classe di codici correttori di errori utilizzari nell'ambito delle telecomunicazioni. Una delle ragioni per cui questi codici sono largamente utilizzati \`e la loro abilit\`a di raggiungere prestazione vicine alla capacit\`a teorica del canale di comunicazione, nota come il limite di Shannon. I codici LDPC possono essere rappresentati in due modi:
 \begin{itemize}
 \item come una matrice di dimensioni $M \times N$ dove $N$ rappresenta la dimensione del messaggio che si vuole codificare ed $M = N - k$, con $k$ ottenuto dal prodotto tra $N$ e il code-rate, corrisponde al numero di bit ridondanti nel messaggio codificato, che vengono utilizzati per la correzione degli errori. Questa matrice \`e prevalentemente composta da zeri e contiene un numero limitato di uno.
 \item come una grafo bipartito rappresentato da nodi check e nodi variabile; facendo riferimento alla rappresentazione matriciale il numero di nodi check \`e $M$ (numero di righe della matrice) e quello di nodi variabile \`e $N$ (numero di colonne della matrice). Gli uno contenuti nella matrice, nel grafo, sono denotati dagli archi che collegano un nodo variabile ad un nodo check.
@@ -169,7 +171,7 @@ Dopodich\'e vengono utilizzati dei codici LDPC~\cite{borwankar_low_nodate} che r
 \begin{center}
 \includegraphics[width=0.8\textwidth]{figure/tanner_graph.eps} 
 \end{center}
-\caption[Grafo bipartito]{Grafo bipartito che rappresenta la matrice di parit\`a, in questo particolara caso fa riferimento alla matrice H \ref{eq:h-matrix} sottostante.}
+\caption[Grafo bipartito]{Grafo bipartito che rappresenta la matrice di parit\`a, in questo particolare caso fa riferimento alla matrice H \ref{eq:h-matrix} sottostante.}
 \end{figure}
 \end{itemize}
 
