--- a/scritturaTesi/capitolo_3.tex
+++ b/scritturaTesi/capitolo_3.tex
@@ -1,8 +1,8 @@
 La realizzazione di questo simulatore per la distribuzione quantistica di chiavi con modulazione gaussiana si prefigge lo scopo di realizzare una chiave crittografica sicura condivisa tra due parti, la quale successivamente potr\`a essere utilizzate per la codifica e decodifica di un messaggio trasmesso su un canale pubblico classico. 
 
-Per lo sviluppo del simularore \`e stato utilizzato il linguaggio di programmazione C++. I motivi principali di questa scelta sono tre: la velocit\`a del linguaggio di programmazione, la disponidilit\`a di librerie che implementano le distribuzioni di probabilit\`a necessarie alla simulazione e la presenza di librerie esterne che implementano due algoritmi indispensabili per la correzione degli errori.
+Per lo sviluppo del simularore \`e stato utilizzato il linguaggio di programmazione C++. I motivi principali di questa scelta sono tre: la velocit\`a del linguaggio di programmazione, la disponibilit\`a di librerie che implementano le distribuzioni di probabilit\`a necessarie alla simulazione e la presenza di librerie esterne che implementano due algoritmi indispensabili per la correzione degli errori.
 
-Anche se il progetto \`e stato realizzato utilizzando C++ \`e stato deciso di illustrare quanto \`e stato fatto attraverso dello psdeudo-codice in modo tale da non legare la simulazione ad una specifico linguaggio di programmazione ed agevolarne la re-mplementazione in qualunque linguaggio di programmazione si voglia utilizzare.
+Anche se il progetto \`e stato realizzato utilizzando C++ \`e stato deciso di illustrare quanto \`e stato fatto attraverso dello psdeudo-codice in modo tale da non legare la simulazione ad una specifico linguaggio di programmazione ed agevolarne la re-implementazione in qualunque linguaggio di programmazione si voglia utilizzare.
 
 Prima di addentranci nella descrizione delle fasi della simulazione, \`e bene andare a definire delle costanti necessarie per il corretto funzionamente del simulatore. Le costanti in questione sono il rumore e la trasmittanza del canale, rispettivamente $\xi = 0.005$ e $T=0.1$, la varianza $V_{mod}=5.226$ della modulazione ed il code-rate $R = 0.3$. I valori per queste costanti sono stati scelti in base ai risultati ottenuti negli articoli~\cite{https://doi.org/10.1002/qute.201800011} e \cite{e24101463}.
 
@@ -26,12 +26,12 @@ P_B \sim \mathcal N(\sqrt{T} p_B, 1 + \xi)
 \end{equation}
 
 \section{Sifting}\label{se:sifting}
-Prima di procede con l'effettiva stima dei parametri \`e necessario effettua il sitfing (vaglio delle informazioni). A questo punto delle simulazione si hanno gli stati coerenti inviati e l'insieme delle misure delle componenti. Dal momento che viene effettuata la misura di una sola componente per ogni round di trasmissione, i dati trasmessi sono il doppio di quelli misurati. L'operazione che viene effettuata \`e molto semplice: per ogni misura effettuata viene determinata quale componente \`e stata misurata, questo grazie al tag di cui abbiamo parlato nella sottosezione~\ref{subse:prep-stato}; per il round di trasmissione corrispondente vengono mantenute solamente le informazione di valore medio e tag relative alla componente misurata scartando di resto.
+Prima di procedere con l'effettiva stima dei parametri \`e necessario effettuare il sifting (vaglio delle informazioni). A questo punto della simulazione si hanno gli stati coerenti inviati e l'insieme delle misure delle componenti. Dal momento che viene effettuata la misura di una sola componente per ogni round di trasmissione, i dati trasmessi sono il doppio di quelli misurati. L'operazione che viene effettuata \`e molto semplice: per ogni misura effettuata viene determinata quale componente \`e stata misurata, questo grazie al tag di cui abbiamo parlato nella sottosezione~\ref{subse:prep-stato}; per il round di trasmissione corrispondente vengono mantenute solamente le informazioni di valore medio e tag relative alla componente misurata scartando il resto.
 
 Questa operazione viene effettata per ogni coppia di dati trasmessi e misurati.
 
 \section{Stima dei parametri}
-La stima dei parametri \`e una fase indispensabile del protocollo perch\'e permette di determinare se la trasmissione \`e stata sicura oppure \`e avvenuta l'intromissione di una spia. Per la stima dei parametri Alice e Bob dovrebbero scambiarsi un subset random dei dati trasmissi ma per semplicit\`a nella simulazione utilizziamo i primi $n$ dati trasmessi. In un'applicazione reale del protocollo questa \`e una pessima scelta, perch\'e se Eve venisse in possesso di questa informazione potrebbe non intercettare i primi $n$ segnali andando a misurare solo la restante parte. Cos\`i facendo Eve non verrebbe rilevata pur avendo intercettato la parte pi\'u importante della comunicazione, cio\`e i dati che verranno utilizzati per distillare la chiave.
+La stima dei parametri \`e una fase indispensabile del protocollo perch\'e permette di determinare se la trasmissione \`e stata sicura oppure \`e avvenuta l'intromissione di una spia. Per la stima dei parametri Alice e Bob dovrebbero scambiarsi un subset random dei dati trasmessi ma per semplicit\`a nella simulazione utilizziamo i primi $n$ dati trasmessi. In un'applicazione reale del protocollo questa \`e una pessima scelta, perch\'e se Eve venisse in possesso di questa informazione potrebbe non intercettare i primi $n$ segnali andando a misurare solo la restante parte. Cos\`i facendo Eve non verrebbe rilevata pur avendo intercettato la parte pi\'u importante della comunicazione, cio\`e i dati che verranno utilizzati per distillare la chiave.
 
 Chiamiamo i subset di dati dopo il sifting di Alice e Bob utilizzati per la stima dei parametri $Q_A$ e $Q_B$ per la componente di quadrature $q$ e $P_A$ e $P_B$ per la componente di quadratura $p$.
 
@@ -66,19 +66,19 @@ Svolte tutte le operazioni illustrate dall'algoritmo~\ref{al:stima-param} per ot
 \section{Riconciliazione}
 A questo punto della simulazione si \`e in possesso del subset di dati non utilizzati per la stima dei parametri che andiamo a chiamare $\textbf{X}_0$ e $\textbf{Y}_0$; prima di effettuare la reconciliazione vengono prodotte, a partire da questi dati, altre due sequenze di dati correlati che chiameremo $\textbf{X}$ e $\textbf{Y}$ come illustrato nell'equazione~\ref{eq:normalizzazione}. 
 
-Poi viene prodotta la stringa $\textbf{s}$ la quale viene codificata attraverso l'algoritmo PEG (Progresive Edge Growth) per ottente la stringa $\textbf{c}$. Utilizziamo la stringa $\textbf{c}$ per modulare il segno della sequenza di dati $\textbf{Y}$ di Bob per produrre il messaggio  $\textbf{m}$ che verr\`a inviato ad Alice. Da messaggio  $\textbf{m}$ Alice estrarr\`a una messaggio fittizio $\textbf{r}$ con $r_i = \frac{m_i}{X_i}$ che corrisponde alla trasmisione su un canale Gaussiano con rumore di varianza $V_i = \frac{V_z}{|X_i|}$.
+Poi viene prodotta la stringa $\textbf{s}$ la quale viene codificata attraverso l'algoritmo PEG (Progressive Edge Growth) per ottente la stringa $\textbf{c}$. Utilizziamo la stringa $\textbf{c}$ per modulare il segno della sequenza di dati $\textbf{Y}$ di Bob per produrre il messaggio  $\textbf{m}$ che verr\`a inviato ad Alice. Da messaggio  $\textbf{m}$ Alice estrarr\`a un messaggio fittizio $\textbf{r}$ con $r_i = \frac{m_i}{X_i}$ che corrisponde alla trasmisione su un canale Gaussiano con rumore di varianza $V_i = \frac{V_z}{|X_i|}$.
 
 Per tutti gli elementi del messaggio \textbf{r} vengono calcolati i valori di varianza che a loro volta vengono utilizzati per calcolare le LLRs (log-likelihood ratios) che sono definite come~\cite{gumucs2021novel}:
 \begin{equation}
 l_i = \log \frac{P(R_i = r_i| C_i = 0)}{P(R_i = r_i| C_i = 1)} = \frac{2r_i}{V_i}
 \end{equation}
 
-Le LLRs sono il logaritmo del rapporto tra la probabilit\`a condizionata che il messaggio $r_i$ provenisse effettivamente da un bit $0$ e la probabilit\'a che il messaggio $r_i$ provenisse da una bit $1$. I valori di LLRs permettono ad Alice, grazie all'utilizzo di un algoritmo LDPC di decodifica~\ref{al:sum-prod}, di ottenere una stima $\textbf{c'}$ della stringa $\textbf c$ prodotta da Bob.
+Le LLRs sono il logaritmo del rapporto tra la probabilit\`a condizionata che il messaggio $r_i$ provenisse effettivamente da un bit $0$ e la probabilit\'a che il messaggio $r_i$ provenisse da un bit $1$. I valori di LLRs permettono ad Alice, grazie all'utilizzo di un algoritmo LDPC di decodifica~\ref{al:sum-prod}, di ottenere una stima $\textbf{c'}$ della stringa $\textbf c$ prodotta da Bob.
 
 
 %che le permettar\`a, attraverso l'utilizzo dell'algoritmo $\textit{sum-product}$~\ref{al:sum-prod}, di ottenere una stima della stringa di bit $\textbf{c}$ prodotta originariamente da Bob.
 
-Tutte queste operazione vengono illustrate nell'algoritmo~\ref{al:recon} facendo riferimento alla sottosezione~\ref{subse:riconciliazione}.
+Tutte queste operazioni vengono illustrate nell'algoritmo~\ref{al:recon} facendo riferimento alla sottosezione~\ref{subse:riconciliazione}.
 
 \begin{algorithm}[t]
 \caption{: Riconciliazione}\label{al:recon}
@@ -109,7 +109,7 @@ Tutte queste operazione vengono illustrate nell'algoritmo~\ref{al:recon} facendo
 
 
 \subsection{Algoritmi Sum-Product e classic PEG}\label{subse:algorithms}
-L'algoritmo LDPC utilizzato per la decodifica nella simulazione prende in nome di \textit{sum-product}~\ref{al:sum-prod}. Questo algoritmo utilizza la tecnica di \textit{belief propagation} per creando per i nodi check e i nodi variabile dei messaggi. Questi messaggi vengono aggiornati ad ogni iterazione dell'algoritmo e permettono, a loro volta, di aggiornale i valori delle LLRs.
+L'algoritmo LDPC utilizzato per la decodifica nella simulazione prende in nome di \textit{sum-product}~\ref{al:sum-prod}. Questo algoritmo utilizza la tecnica di \textit{belief propagation} creando per i nodi check e i nodi variabile dei messaggi. Questi messaggi vengono aggiornati ad ogni iterazione dell'algoritmo e permettono, a loro volta, di aggiornaee i valori delle LLRs.
 
 Per quanto riguarda la codifica abbiamo utilizzato l'algoritmo \textit{classic-peg}, il quale realizza la matrice di parit\`a rappresentata come un grafo partendo dalla dimensione della matrice che si vuole ottenere e da quantit\`a $\Lambda$ che rappresentano le frazioni dei nodi variabile che avranno un certo grado. \`E possibile calcolare le componenti del vettore $\Lambda$ in questo modo:
 \begin{equation}
@@ -119,7 +119,7 @@ dove $r_i$ vengono calcolati come segue:
 \begin{equation}
 r_i = \frac{\lambda_i}{i}
 \end{equation}
-a partire da delle quantit\`a $\lambda$ che prendono in nome di node degree distribution e rappresentano la frazione di archi collegati ad una nodo di grado $d$.
+a partire da delle quantit\`a $\lambda_i$ che prendono il nome di node degree distribution e rappresentano la frazione di archi collegati ad un nodo variabile di grado $i$.
 
 Tutti i valori del vettore $\lambda$, i gradi dei nodi da utilizzare e l'espressione per il calcolo del vettore $\Lambda$ fanno riferimento ai risultati ottenuti nell'articolo \cite{e24101463} in merito al code-rate ed al valore di SNR da noi scelto.
 
@@ -134,6 +134,8 @@ L'algoritmo \textit{classic-peg} genera il grafo, partendo dai parametri in inpu
 \item il sottografo del nodo corrente copre tutti i nodi del grafo. In questo caso si sceglie il nodo check pi\`u lontano dall'attuale nodo variabile.
 \end{itemize}
 \end{itemize}
+
+L'algoritmo è così strutturato per ridurre il numero di sotto-cicli nel grafo finale, che andrebbe a rendere la correzione di errori meno efficiente.
 
 \begin{algorithm} 
 \caption{: Sum-product decoding algorithm}\label{al:sum-prod}
