--- a/scritturaTesi/conclusioni.tex
+++ b/scritturaTesi/conclusioni.tex
@@ -1,4 +1,4 @@
-In questo elaborato abbiamo realizzato una simulazione del protocollo di distribuzioni quantistica di chiavi a variabili continue con modulazione gaussiana. Come prima cosa abbiamo fatto una piccola introduzione storica della crittografia per poi andare a descrivere gli stati coerenti e le loro misure. Successivamente abbiamo parlato pi\`u nel dettaglio del protocollo scelto fino ad arrivare a come la simulazione \`e stata realizzata.
+In questo elaborato abbiamo realizzato una simulazione del protocollo di distribuzione quantistica di chiavi a variabili continue con modulazione gaussiana. Come prima cosa abbiamo fatto una piccola introduzione storica della crittografia per poi andare a descrivere gli stati coerenti e le loro misure. Successivamente abbiamo parlato pi\`u nel dettaglio del protocollo scelto fino ad arrivare a come la simulazione \`e stata realizzata.
 
 A causa dell'avvento dei computer quantistici, i quali sono una minaccia per i classici crittosistemi, abbiamo voluto mostrare come fosse possibile implementare un protocollo di crittografia che non risente di questa minaccia e come fosse possibile produrre una chiave crittografica teoricamente sicura.
 
