--- a/scritturaTesi/capitolo_1.tex
+++ b/scritturaTesi/capitolo_1.tex
@@ -16,7 +16,7 @@ Come detto precedentemente, gli stati coerenti si presentano come una distribuzi
 \begin{center}
 \includegraphics[scale=0.4]{figure/stato_coerente.eps}
 \end{center}
-\caption[stato-coerente]{Questa figura \`e una gaussiana vista dall'alto che viene ottenuta simulando molte volte la produzione dello stesso stato coerente e la misura della grandezza $\hat q$ o $\hat p$. La gaussiana \`e rappresentata su un piano cartesiano riportante sulle ascisse le misure della componente $q$ mentre sulle ordinate le misure della componente $p$} \label{fig:stato-coerente}
+\caption[Stato coerente]{Questa figura \`e una gaussiana vista dall'alto che viene ottenuta simulando molte volte la produzione dello stesso stato coerente e la misura della grandezza $\hat q$ o $\hat p$. La gaussiana \`e rappresentata su un piano cartesiano riportante sulle ascisse le misure della componente $q$ mentre sulle ordinate le misure della componente $p$} \label{fig:stato-coerente}
 \end{figure}
 
 \section{Misurazione dei segnali e incertezza quantistica}
