--- a/scritturaTesi/conclusioni.tex
+++ b/scritturaTesi/conclusioni.tex
@@ -1,7 +1,13 @@
-In questo elaborato abbiamo realizzato una simulazione del protocollo di distribuzione quantistica di chiavi a variabili continue con modulazione gaussiana. Come prima cosa abbiamo fatto una piccola introduzione storica della crittografia per poi andare a descrivere gli stati coerenti e le loro misure. Successivamente abbiamo parlato pi\`u nel dettaglio del protocollo scelto fino ad arrivare a come la simulazione \`e stata realizzata.
+In questo elaborato abbiamo realizzato una simulazione del protocollo di distribuzione quantistica di chiavi a variabili continue con modulazione gaussiana. In principio abbiamo osservato una piccola introduzione storica della crittografia per poi andare a descrivere gli stati coerenti e le loro misure. Successivamente abbiamo trattato pi\`u nel dettaglio il protocollo scelto fino ad arrivare a come la simulazione \`e stata realizzata.
 
-A causa dell'avvento dei computer quantistici, i quali sono una minaccia per i classici crittosistemi, abbiamo voluto mostrare come fosse possibile implementare un protocollo di crittografia che non risente di questa minaccia e come fosse possibile produrre una chiave crittografica teoricamente sicura.
+Infine, a causa dell'avvento dei computer quantistici, i quali sono una minaccia per i classici crittosistemi, abbiamo voluto mostrare come fosse possibile implementare un protocollo di crittografia che non risente di questa minaccia e come fosse possibile produrre una chiave crittografica teoricamente sicura.
 
-La sicurezza per\`o, \`e solamente teorica, perch\'e in una reale implementazione del protocollo c'\`e da tener conto anche dei dispositivi necessari per l'implementazione e delle loro imperfezioni, quindi nella realt\`a \`e impossibile raggiungere una sicurezza assoluta. Si pu\`o ottenere una sicurezza entro certi limiti che sono dati dalla realizzazione dei dispositivi fisici per la realizzazione dei protocolli.
+La sicurezza qui descritta, \`e solamente teorica, perch\'e in una reale implementazione del protocollo c'\`e da tener conto anche dei dispositivi necessari per l'implementazione dello stesso e delle loro imperfezioni, quindi nella realt\`a \`e impossibile raggiungere una sicurezza assoluta. In pratica si pu\`o ottenere una sicurezza entro certi limiti che sono dati dalla realizzazione dei dispositivi fisici necessari per l'implementazione dei protocolli.
+
+In merito alla realizzazione di dispositivi, nel prossimo futuro saranno disponibili delle certificazioni che attestano il reale livello di sicurezza che un certo dispositivo pu\`o garantire in una reale applicazione di un protocollo.
+
+\break
+Inoltre, tenendo conto delle dfficolt\`a odierne relative al rumore sul canale adoperato, la commercializzazione e la diffusione di calcolatori quantistici permetter\`a lo sviluppo e la propagazione nell'utilizzo di nuovi protocolli e di schemi di correzione dell'errore pi\`u performanti.
+
 
 
