--- a/scritturaTesi/introduzione.tex
+++ b/scritturaTesi/introduzione.tex
@@ -1,5 +1,5 @@
 La crittografia, da migliaia di anni, ha costituito il fondamento delle comunicazioni segrete e della protezione dei dati sensibili. 
-Nel corso della storia umana, dall'antico Egitto fino alla met\`a del secolo scorso, la crittografia veniva considerata un'arte e tutti i sistemi crittografici e cifrari che venivano realizzati erano considerati sicuri fino al momento in cui qualcuno riusciva a trovare una falla nel sistema e decifrare il messaggio senza una chiave.
+Nel corso della storia umana, dall'antico Egitto fino alla met\`a del secolo scorso, la crittografia veniva considerata un'arte\footnote{Dal dizionario Treccani: \textit{In senso lato, capacità di agire e di produrre, basata su un particolare complesso di regole e di esperienze conoscitive e tecniche, e quindi anche l’insieme delle regole e dei procedimenti per svolgere un’attività umana in vista di determinati risultati.}} e tutti i sistemi crittografici e cifrari che venivano realizzati erano considerati sicuri fino al momento in cui qualcuno riusciva a trovare una falla nel sistema e decifrare il messaggio senza una chiave.
 
 Nel 1949, grazie a Claude Shannon, inizia l'era moderna della crittografia la quale, da questo punto in poi della storia, viene considerata oltre che un'arte anche una scienza. Shannon nel '49 pubblica un articolo denominato "Communication Theory of Secrecy Systems"\cite{6769090} nel quale comprova, per la prima volta, la sicurezza del cifrario di Vernam (comunemente chiamato One Time Pad) attatraverso dimostrazioni matematiche.
 
@@ -19,7 +19,7 @@ Il primo protocollo ad essere stato proposto per la distribuzione quantistica di
 Questo protocollo per realizzare la comunicazione utilizza due canali di trasmissione, uno classico e pubblico e l'altro quantistico e privato. Alice trasmette sul canale quantistico a Bob una sequenza di fotoni polarizzati in modo casuale in due basi, ognuna delle quali ha due gradi di polarizzazione.
 In ricezione Bob effettuer\`a la misura della polarizzazione del fotone utilizzando una base disponibile. In trasmissione potrebbe succedere che Eve tenti a sua volta di misurare la polarizzazione del fotone alterandola e questo porter\`a Bob a ricevere una fotone polarizzato in modo differente rispetto a quello inviato da Alice. Questa alterazione da parte di Eve porter\`a Alice e Bob a determinare la presenza di una spia durante una fase di confronto successiva alla trasmissione~\cite{zhao_development_2018}.
 
-In questa tesi studieremo un protocollo di QKD che utilizza una codifica non nei singoli fotoni ma piuttosto nella fase di un segnale quantistico. La tesi è strutturata nel seguente modo: nel capitolo ~\ref{cap:capitolo_1} introdurremo gli stati coerenti con le loro propriet\`a e la misura di segnali quantistici, nel capitolo ~\ref{cap:capitolo_2} discuteremo dei protocolli QKD ed in particolare del protocollo CV-QKD con modulazione gaussiana,  nel capitolo~\ref{cap:capitolo_3} illustreremo una possibile implementazione del protocollo discusso nel capitolo precedente ed infine, nel capitolo 4 discuteremo le conclusioni.
+In questa tesi studieremo un protocollo di QKD che utilizza una codifica non nei singoli fotoni ma piuttosto nella fase di un segnale quantistico. La tesi è strutturata nel seguente modo: nel capitolo ~\ref{cap:capitolo_1} introdurremo gli stati coerenti con le loro propriet\`a e la misura di segnali quantistici, nel capitolo ~\ref{cap:capitolo_2} discuteremo dei protocolli QKD ed in particolare del protocollo CV-QKD con modulazione gaussiana,  nel capitolo~\ref{cap:capitolo_3} illustreremo una possibile implementazione del protocollo discusso nel capitolo precedente ed infine, discuteremo le conclusioni.
 
 
 %Il primo protocollo ad essere stato proposto per la distribuzione quantistica di chiavi \`e il BB84 che prende il nome dai suoi ideatori Charles H. Bennett e Gilles Brassard che lo hanno realizzato nel 1984~\cite{ Bennett_2014}.
